--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -33,6 +33,8 @@ find_library( # Sets the name of the path variable.
               # you want CMake to locate.
               log )
 
+find_library(vulkan-lib vulkan)
+
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in the
 # build script, prebuilt third-party libraries, or system libraries.
@@ -42,4 +44,6 @@ target_link_libraries( # Specifies the target library.
 
                        # Links the target library to the log library
                        # included in the NDK.
-                       ${log-lib} )
+                       ${log-lib}
+
+                       ${vulkan-lib})
