--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".VulkanTestActivity"
             android:enableVrMode="gvr_vr_mode_component"
             android:resizeableActivity="false" android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <category android:name="com.google.intent.category.DAYDREAM"/>
+                <!--<category android:name="com.google.intent.category.DAYDREAM"/>-->
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
