--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -23,7 +23,8 @@ add_library( # Sets the name of the library.
              src/main/cpp/vulkan_jni.cpp
              src/main/cpp/VkInstanceHolder.cpp
              src/main/cpp/VkDeviceHolder.cpp
-             src/main/cpp/VkSurfaceHolder.cpp)
+             src/main/cpp/VkSurfaceHolder.cpp
+             src/main/cpp/VkPiplelineHolder.cpp)
 
 # build native_app_glue as a static lib
 set(APP_GLUE_DIR ${ANDROID_NDK}/sources/android/native_app_glue)
